# messenger2017

./: .gitignore  .gitmodules  cppcheck.sh
client/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.05af23a  CMakeLists.txt.user.a82ab5a  core_dispatcher.h  error.h  readme.txt
client/core/: .gitignore  CMakeLists.txt  lol.json
client/core/include/: config.h  contact.h  contact_manager.h  context.h  core.h  core_dispatcher.h  dispatcher.h  error.h  guid.h  init.h  jobtype.h  json_builder.h  login_manager.h  loginmanager.h  message.h  message_manager.h  path_settings.h  registermanager.h
client/core/src/: chat.cpp  config.cpp  contact.cpp  contact_manager.cpp  core.cpp  core_dispatcher.cpp  error.cpp  guid.cpp  init.cpp  json_builder.cpp  login_manager.cpp  login_maneger.cpp  message.cpp  message_manager.cpp  path_settings.cpp
client/core/tests/: CMakeLists.txt  contact-list.json  example.json  message-story.json  test.cpp
client/core/tests/net-interop/server/: .gitignore  requirements.txt
client/gui/: CMakeLists.txt  application.qrc  stdafx.h
client/gui/include/: QmlCppInterface.h  chats_filter_proxy_model.h  chats_model.h  contacts_model.h  guiadapter.h  messages_model.h  models_elements.h  registrationcontroler.h
client/gui/include/controlers/: chatscontroler.h  logincontroler.h  messagescontroler.h  registrationcontroler.h
client/gui/include/models/: chats_filter_proxy_model.h  chats_model.h  contacts_model.h  messages_model.h  models_elements.h
client/gui/qml/: AddDialog.qml  ChatListDelegateItem.qml  ChatListView.qml  ChatMessagesModel.qml  ChatPage.qml  ContactListDelegateItem.qml  ContactWidget.qml  ContactWidgetModel.qml  ContactsList.qml  Info.qml  LoginPage.qml  MainPage.qml  PageWithLogo.qml  RectangleLogo.qml  RegisterPage.qml  SettingsListDelegateItem.qml  SettingsPage.qml  Style.qml  main.qml  qml.qrc
client/gui/src/: chats_filter_proxy_model.cpp  chats_model.cpp  contacts_model.cpp  guiadapter.cpp  main.cpp  messages_model.cpp  models_elements.cpp  registrationcontroler.cpp
client/gui/src/controlers/: chatscontroler.cpp  logincontroler.cpp  messagescontroler.cpp  registrationcontroler.cpp
client/gui/src/models/: chats_filter_proxy_model.cpp  chats_model.cpp  contacts_model.cpp  messages_model.cpp  models_elements.cpp
client/shared/: handlers.h
client/shared_client/: chat.h  contact.h  handlers.h  message.h
client/src/: core_dispatcher.cpp  error.cpp  guid.cpp
common/m2-crypto/: .gitignore  CMakeLists.txt
common/m2-crypto/include/m2/crypto/: hash.h  pki.h
common/m2-crypto/src/m2/crypto/: hash.cc  pki.cc
routing/: .gitignore  CMakeLists.txt  build.sh  readme.txt  stdafx.h
routing/docs/discussions/: 1st tasks division.txt  Node class.txt  all classes.txt
routing/include/DHT/: DHT.h
routing/include/NetworkConnector/: NetworkConnector.h
routing/include/core/: Node.h
routing/include/data_structures/: Message.h  NodeInfo.h
routing/include/handlers/: CommandHandler.h  FindDataHandler.h  FindNodeHandler.h
routing/include/handlers/processors/: FindDataProcessor.h  FindProcessor.h
routing/include/kbuckets/: KBucket.h  KBucketsManager.h
routing/include/processors/: FindProcessor.h  Processor.h
routing/include/utils/: Config.h  Validator.h
routing/src/: main.cpp
routing/src/DHT/: DHT.cpp
routing/src/NetworkConnector/: NetworkConnector.cpp
routing/src/core/: Node.cpp
routing/src/data_structures/: Message.cpp  NodeInfo.cpp
routing/src/handlers/: CommandHandler.cpp  CommandHandler.h  FindDataHandler.cpp  FindNodeHandler.cpp  FindNodeHandler.h
routing/src/handlers/processors/: FindProcessor.cpp
routing/src/kbuckets/: KBucket.cpp  KBucketsManager.cpp  KBucketsTools.cpp
routing/src/processors/: FindProcessor.cpp  Processor.cpp
routing/src/utils/: Config.cpp  Validator.cpp
server/: .gitignore  CMakeLists.txt  stdafx.h
server/Test/Dialogs/1/2/: 256  (+1 more)
server/Test/Keys/: 2
server/include/: Manager.h  RegisterManager.h  SendKeyManager.h  http_request.h  http_response.h  make_response.h  manager_controller.h  server.h  session.h
server/include/Auth/: LoginManager.h  LoginSendKeyManager.h
server/include/Data/: Data.hpp  Data_Test.h  Database.h  stdafx.h
server/include/Data/Dialog/: Dialog.h  DialogSystem.hpp  Dialogs.h  UserDialogs.h
server/include/Data/Message/: Message.h
server/include/Data/Sessions/: Sessions.h
server/include/Data/User/: User.h  Users.h
server/include/Data/index/: CashManager.hpp  FileHandler.h  IndexManager.h  IndexManager.hpp
server/include/Data2/: Database.h  User.h  Users.h  stdafx.h
server/include/Registration/: RegisterManager.h  RegisterSendKeyManager.h
server/src/: Manager.cpp  Manager.h  RegisterManager.cpp  RegisterManager.h  SendKeyManager.cpp  http_request.cpp  http_response.cpp  main.cpp  manager_controller.cpp  server.cpp  session.cpp
server/src/Auth/: LoginManager.cpp  LoginSendKeyManager.cpp
server/src/Data/: Data.hpp  Data_Test.h  Database.cpp  Database.h  Global_TODO  User.cpp  Users.cpp  stdafx.cpp  stdafx.h
server/src/Data/Dialog/: Dialog.cpp  Dialog.h  DialogSystem.hpp  Dialogs.cpp  Dialogs.h  UserDialogs.cpp  UserDialogs.h
server/src/Data/Index/: CashManager.hpp  FileHandler.cpp  FileHandler.h  IndexManager.cpp  IndexManager.h  IndexManager.hpp
server/src/Data/Message/: Message.cpp  Message.h
server/src/Data/Sessions/: Sessions.cpp
server/src/Data/User/: User.cpp  User.h  Users.cpp  Users.h
server/src/Data2/: Database.cpp  User.cpp  Users.cpp
server/src/Registration/: RegisterManager.cpp  RegisterSendKeyManager.cpp  private.pem  public.pem
shared/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig
shared/cmake/Modules/: FindLibSSH.cmake
shared/examples/: crypto_example.cc  crypto_example.cpp
shared/include/: base64.h  crypto_common.h  crypto_hash.h  crypto_pki.h  crypto_sym.h  http_client.h  http_connection.h  perform_result.h  safe_log.h
shared/src/: base64.cc  base64.cpp  common.cc  crypto_common.cpp  crypto_hash.cpp  crypto_pki.cpp  crypto_sym.cpp  hash.cc  http_client.cpp  http_connection.cpp  pki.cc  safe_log.cpp  sym.cc
(+20 files in other folders)
